--- a/src/app/components/vocabulary-list/vocabulary-list.component.html
+++ b/src/app/components/vocabulary-list/vocabulary-list.component.html
@@ -4,6 +4,18 @@
 <div *ngIf="page" class="page">
     <app-vocabulary-exercise [train]="true" [page]="page" [cards]="train" *ngIf="train.length > 0" (finished)="exerciseResult = $event"></app-vocabulary-exercise>
 
+
+    <div class="alert alert-success sticky" role="alert" *ngIf="successSave">
+        <div class="alert-items">
+            <div class="alert-item static">
+                <div class="alert-icon-wrapper">
+                    <cds-icon class="alert-icon" shape="check-circle"></cds-icon>
+                </div>
+                <span class="alert-text">successfully saved</span>
+            </div>
+        </div>
+      </div>
+
     <div class="top">
         <h1>{{page.title}}</h1>
         <div>
