set language for text to speech

--- a/src/app/components/vocabulary-edit/vocabulary-edit.component.html
+++ b/src/app/components/vocabulary-edit/vocabulary-edit.component.html
@@ -6,3 +6,7 @@
     <label>Image</label>
     <input clrInput type="text" [(ngModel)]="page!.icon" name="example" placeholder="image for the vocabulary" />
 </clr-input-container>
+<clr-input-container>
+    <label>Language</label>
+    <input clrInput type="text" [(ngModel)]="page!.language" name="de" placeholder="language for the vocabulary" />
+</clr-input-container>
