--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,8 +13,8 @@
             <a class="nav-link nav-icon" [routerLink]="['/vocabulary']"><cds-icon shape="talk-bubbles"></cds-icon></a>
         </div>
         <div class="search">
-            <label for="search_input">
-                <input id="search_input" type="text" placeholder="search for keywords..." (change)="search($event.target)">
+            <label for="search-input-sidenav-ng">
+              <input id="search-input-sidenav-ng" type="text" placeholder="Search for keywords..." (change)="search($event.target)" />
             </label>
         </div>
     </header>
